--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@heroicons/react": "^2.0.15",
+    "@mui/material": "^5.11.8",
     "@next/font": "13.1.6",
+    "@popperjs/core": "^2.11.6",
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
@@ -20,6 +24,9 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.7.1",
+    "react-popper": "^2.3.0",
+    "recoil": "^0.7.6",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "4.9.5"
   },
   "devDependencies": {
