--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.7.1",
+    "react-input-emoji": "^4.3.0",
     "react-popper": "^2.3.0",
     "recoil": "^0.7.6",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
+    "@types/uniqid": "^5.3.2",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.6"
